--- a/src/components/videoPage/videoPhoto.scss
+++ b/src/components/videoPage/videoPhoto.scss
@@ -22,6 +22,12 @@
       }
     }
   }
+  .videofastc {
+    width: 85%;
+    height: 70%;
+    margin: auto;
+    margin-top: 3%;
+  }
   .btn {
     text-align: center;
     margin-top: 5% !important;
